--- a/movieapi/app/static/css/styles.css
+++ b/movieapi/app/static/css/styles.css
@@ -1,6 +1,8 @@
 body, html  {
     height: 100%;
     font-family: 'Open Sans', sans-serif;
+    background-color: #222;
+    color: #fff;
 }
 
 hr {
@@ -19,7 +21,6 @@ hr {
 
 .customSidebar {
     height: 100%;
-    background-color: #222;
     font-size: 20px;
 }
 
@@ -37,4 +38,33 @@ hr {
 
 .mainContainer {
   margin: 30px;
+}
+
+.mainContainer a {
+    color: white;
+}
+
+.center {
+  text-align: center;
+}
+
+.bigDivider {
+  height: 1px;
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background-color: #fff;
+}
+
+.buttonContainer {
+  margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.movieItem {
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: left;
 }
